fix(file-list): Wrap long file name text

--- a/frontend/src/app/modules/interventions/details/file-list/file-list.component.scss
+++ b/frontend/src/app/modules/interventions/details/file-list/file-list.component.scss
@@ -2,8 +2,9 @@
   max-width: 650px;
 }
 
-.mat-column-name {
-  text-overflow: ellipsis;
+.mat-column-name:not(.mat-header-cell) {
+  display: block;
+  align-self: flex-end;
 }
 
 .mat-column-type {
